# ubilling_user_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_sessions.py
locales/: en.json  ru.json  uk.json
src/bot/: __main__.py  config.py
src/bot/db/: __init__.py  engine.py  models.py
src/bot/handlers/: __init__.py  announcements.py  credit.py  freeze.py  info.py  language.py  menu.py  payments.py  start.py  tariffs.py  tickets.py
src/bot/i18n/: __init__.py  locale_service.py
src/bot/keyboards/: __init__.py  common.py  freeze.py  language.py  main_menu.py  payments.py  tariffs.py  tickets.py
src/bot/middlewares/: __init__.py  auth.py  i18n.py
src/bot/services/: __init__.py  billing.py
src/bot/states/: __init__.py  forms.py
src/bot/utils/: __init__.py  formatting.py  pagination.py  safe_edit.py
