[project]
name = "ubilling-user-bot"
version = "0.1.0"
description = "Telegram-бот личного кабинета абонента Ubilling"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "pydantic-settings>=2.0.0",
    "alembic>=1.15.0",
    "redis>=5.0.0",
    "pyubilling @ git+https://github.com/Fenicu/UbillingWrapper",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/bot"]
